--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download UltraEdit text editor for Windows</title>
-    <link rel="stylesheet" href="stylesheet (ex 7).css">
+    <link rel="stylesheet" href="styles.css">
 </head>
     <body>
         <header>
